--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/*Main*/
 main{
     display:flex;
     justify-content: space-around;
@@ -7,17 +7,20 @@ main{
 .main-title{
     text-align: center;
 }
+
 .main-content{
-    padding:10px;
-    border: 1px solid;
+    padding:20px;
     flex:1;
-    
 }
+
+
+/*Form data dan input*/
 form{
     padding:10px;
     background-color: #a7c3ed;
     border-radius: 8px;
 }
+
 input[type=number]{
     width: 100%;
     padding:5px 20px;
@@ -29,27 +32,44 @@ input[type=number]{
     transition: 0.5s;
     outline: none;
 }
+
+
+/*Button (submit, reset) dan  focus nya*/
 button{
-    height: 20px;
+    height: 30px;
     border-radius: 8px;
     background-color: mediumaquamarine;
 }
+
 .submit{
     background-color: mediumaquamarine;
-}
-.reset{
-    background-color: rgb(222, 200, 89);
 }
 
 .submit:focus{
     background-color: rgb(0, 255, 128);
     border: 3px solid ;
 }
+
+.reset{
+    background-color: rgb(222, 200, 89);
+}
+
 .reset:focus{
     background-color: rgb(255, 153, 0);
     border: 3px solid;
 }
+
+
+/*Untuk section hasil dan tambahan */
 .section-hasil{
+    background-color: #a7c3ed;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.section-tambahan{
     background-color: #a7c3ed;
     border: 1px solid;
     padding: 10px;
